<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
<group android:checkableBehavior="single">
    <item
        android:iconTint="@color/black"
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:iconTint="@color/black"
        android:id="@+id/chart"
        android:icon="@drawable/list_icon"
        android:title="@string/chart"
        app:showAsAction="always" />
    <item
        android:iconTint="@color/black"
        android:id="@+id/time"
        android:icon="@drawable/ic_baseline_update_24"
        android:title="@string/timer"
        app:showAsAction="always" />
    <item
        android:iconTint="@color/black"
        android:id="@+id/profile"

        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile"
        app:showAsAction="always" />

</group>

    <group android:id="@+id/information"
        android:menuCategory="secondary"
        
        android:checkableBehavior="single">

        <item android:id="@+id/helpsupport"
            android:iconTint="@color/black"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/helpsupport"
            app:showAsAction="always"
            />

        <item android:id="@+id/aboutus"
            android:iconTint="@color/black"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about_us"
            app:showAsAction="always"
            />
        <item
            android:iconTint="@color/black"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/rateus"
            app:showAsAction="always"
            />
        <item android:id="@+id/logout"
            android:iconTint="@color/red_btn_bg_color"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/logout"
            app:showAsAction="always"

            />
    </group>
</menu>