<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_first_tab_selector"
        app:showAsAction="always" />
    <item
        android:id="@+id/chart"
        android:title="@string/chart"
        android:icon="@drawable/ic_first_tab_selector3"

        app:showAsAction="always" />
    <item
        android:id="@+id/time"
        android:title="@string/timer"
        android:icon="@drawable/ic_first_tab_selector2"
        app:showAsAction="always" />
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_first_tab_selector4"
        app:showAsAction="always" />
</menu>