<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".activity.Activity_Hospital_Practice">

    <include layout="@layout/toolbar" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/searchview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/text_fieldcardview"
        android:hint="@string/search_hint"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:minHeight="@dimen/_30sdp"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:fontFamily="@font/seogei"
        android:visibility="gone"
        android:drawableRight="@android:drawable/ic_menu_search"
        android:textSize="@dimen/_12sdp">
    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchview"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:visibility="gone"
        android:background="@color/white">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_5ssp"
        android:layout_marginTop="@dimen/_5ssp"
        android:layout_marginEnd="@dimen/_5ssp"
        android:layout_marginBottom="@dimen/_5ssp"
        android:gravity="center"
        android:minHeight="@dimen/_30sdp"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addnewhospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/earning_button"
            android:gravity="center"
            android:minHeight="@dimen/_30sdp"
            android:fontFamily="@font/seogei"
            android:padding="@dimen/_2sdp"
            android:text="@string/add_more"
            android:visibility="gone"
            android:textColor="@color/Blue11" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/_5sdp"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/button"
            android:gravity="center"
            android:minWidth="@dimen/_150sdp"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:text="Next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:fontFamily="@font/seogei"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"></FrameLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/thankyou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/thankyou"
        android:textColor="@color/red"
        android:fontFamily="@font/robotoregular"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thankyou"
        android:textColor="#757575"
        android:gravity="center"
        android:fontFamily="@font/robotoregular"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_centerVertical="true"
        android:text="@string/verified"/>

</RelativeLayout>